--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,3 +7,9 @@
   font-size: 14px;
   margin: 0;
 }
+@media screen and (max-width: 768px) {
+  .footer {
+    padding-top: 11.8%;
+    padding-bottom: 3.3%;
+  }
+}
