--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -29,3 +29,25 @@
   padding-top: 5%;
   margin-right: 11.5%;
 }
+
+@media screen and (max-width: 768px) {
+  .intro {
+    padding-top: 12%;
+    margin: 0 3.3%;
+  }
+  .intro__title {
+    font-size: 45px;
+  }
+  .intro__quote {
+    padding-top: 7.2%;
+    margin-right: 0;
+  }
+  .intro__quote_author {
+    padding-top: 0;
+    margin-right: 0;
+  }
+  .intro__text {
+    padding-top: 4.6%;
+    margin-right: 0;
+  }
+}
