--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -22,3 +22,20 @@
   width: 100%;
   max-width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+  .lead {
+    padding-top: 12%;
+  }
+  .lead__title {
+    font-size: 75px;
+    margin: 0 15.8%;
+  }
+  .lead__subtitle {
+    margin: 0 3.3%;
+    padding-top: 3.4%;
+  }
+  .lead__image {
+    padding-top: 4%;
+  }
+}
