--- a/blocks/logo.css
+++ b/blocks/logo.css
@@ -2,5 +2,12 @@
   padding: 0;
   margin: auto;
   padding-top: 3%;
-  width: 20%;
+  width: 254px;
+  height: 66px;
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    padding-top: 4%;
+  }
 }
