--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -51,3 +51,24 @@
     margin-right: 0;
   }
 }
+@media screen and (max-width: 320px) {
+  .intro {
+    padding-top: 21.2%;
+    margin: 0 5.4%;
+  }
+  .intro__title {
+    font-size: 32px;
+  }
+  .intro__quote {
+    padding-top: 14.6%;
+    margin-right: 0;
+  }
+  .intro__quote_author {
+    padding-top: 4%;
+    margin-right: 0;
+  }
+  .intro__text {
+    padding-top: 12%;
+    margin-right: 0;
+  }
+}
