--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -20,7 +20,7 @@
 .lead__image {
   padding-top: 6.7%;
   width: 100%;
-  max-width: 100%;
+  object-fit: fill;
 }
 
 @media screen and (max-width: 768px) {
@@ -37,5 +37,23 @@
   }
   .lead__image {
     padding-top: 4%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+    padding-top: 17%;
+  }
+  .lead__title {
+    font-size: 40px;
+    margin: 0 15.8%;
+  }
+  .lead__subtitle {
+    font-size: 16px;
+    margin: 0 5%;
+    padding-top: 5.4%;
+  }
+  .lead__image {
+    padding-top: 13%;
   }
 }
