--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,13 +1,3 @@
-@font-face {
-  src: url(/vendor/web/Inter-Bold.woff2);
-  font-family: "Inter";
-  font-weight: bold;
-}
-@font-face {
-  src: url(/vendor/web/Inter-Medium.woff2);
-  font-family: "Inter";
-}
-
 .page {
   background-color: #000;
   color: #fff;
@@ -20,4 +10,9 @@
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
+}
+@media screen and (min-width: 1280px) {
+  body {
+    background-color: #000;
+  }
 }
