--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,59 +1,59 @@
-.lead {
+.header {
   padding-top: 7%;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: auto;
 }
-.lead__title {
+.header__title {
   font-size: 96px;
   font-weight: bold;
   margin: 0 14%;
   text-align: center;
 }
-.lead__subtitle {
+.header__subtitle {
   font-size: 30px;
   margin: 0 14%;
   padding-top: 3.3%;
   text-align: center;
 }
-.lead__image {
+.header__image {
   padding-top: 6.7%;
   width: 100%;
   object-fit: fill;
 }
 
 @media screen and (max-width: 768px) {
-  .lead {
+  .header {
     padding-top: 12%;
   }
-  .lead__title {
+  .header__title {
     font-size: 75px;
     margin: 0 15.8%;
   }
-  .lead__subtitle {
+  .header__subtitle {
     margin: 0 3.3%;
     padding-top: 3.4%;
   }
-  .lead__image {
+  .header__image {
     padding-top: 4%;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .lead {
+  .header {
     padding-top: 17%;
   }
-  .lead__title {
+  .header__title {
     font-size: 40px;
     margin: 0 15.8%;
   }
-  .lead__subtitle {
+  .header__subtitle {
     font-size: 16px;
     margin: 0 5%;
     padding-top: 5.4%;
   }
-  .lead__image {
+  .header__image {
     padding-top: 13%;
   }
 }
