--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -42,7 +42,7 @@
     padding-top: 7.2%;
     margin-right: 0;
   }
-  .intro__quote_author {
+  .intro__quote-author {
     padding-top: 0;
     margin-right: 0;
   }
