--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -19,3 +19,12 @@
     grid-gap: 16px;
   }
 }
+@media screen and (max-width: 320px) {
+  .gallery {
+    padding-top: 12.7%;
+    margin: 0 5.4%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 12px;
+  }
+}
