--- a/blocks/places.css
+++ b/blocks/places.css
@@ -1,9 +1,9 @@
 .places {
-  padding-top: 9.2%;
+  padding-top: 9.1%;
   margin: 0 14.3%;
 }
 .place {
-  padding-bottom: 8.2%;
+  padding-bottom: 11.1%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(5, auto);
@@ -15,13 +15,13 @@
     "link paragraph3";
   gap: 20px 40px;
 }
-.place__title-1 {
+.place__title-top {
   grid-area: title1;
   font-size: 72px;
   font-weight: bold;
   margin: 0;
 }
-.place__title-2 {
+.place__title-bottom {
   grid-area: title2;
   font-size: 72px;
   font-weight: bold;
@@ -35,8 +35,9 @@
   font-size: 12px;
   color: #aaa;
   text-transform: uppercase;
+  margin-bottom: 8px;
 }
-.artist__paragraph {
+.place__artist_paragraph {
   font-size: 18px;
   margin: 0;
 }
@@ -46,21 +47,25 @@
   width: 100%;
   grid-row: 3/5;
 }
+
 .place__paragraph-top {
   grid-area: paragraph1;
   font-size: 18px;
   margin: 0;
 }
-.place__paragraph-bottom {
+.place__paragraph-mid {
   grid-area: paragraph2;
   font-size: 18px;
   margin: 0;
 }
-.place__paragraph-3 {
+.place__paragraph-bottom {
   grid-area: paragraph3;
   font-size: 18px;
   margin: 0;
 }
 .place__link {
   grid-area: link;
+}
+.place__link-image {
+  margin: 0;
 }
