--- a/blocks/places.css
+++ b/blocks/places.css
@@ -121,9 +121,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
   .place__artists {
     align-self: flex-start;
+  }
+  .place__image {
+    width: 100%;
   }
 }
 
