--- a/blocks/place.css
+++ b/blocks/place.css
@@ -36,12 +36,12 @@
   grid-area: image;
 }
 .place__image {
-  box-shadow: 10px 10px 25px #000;
+  box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.5);
   max-width: 100%;
   grid-row: 2/4;
 }
 .place__image:hover {
-  opacity: 80%;
+  opacity: 0.7;
 }
 .place__paragraphs {
   grid-area: paragraphs;
@@ -62,15 +62,15 @@
 
 .place__link-button {
   padding: 18px 30px;
-  background-image: linear-gradient(to right, #0278fe 0%, #003a7b 100%);
+  background: linear-gradient(90deg, #0278fe40 0%, #003a7b40 99.98%);
   border-radius: 5px;
-  box-shadow: 5px 5px 10px #000;
+  box-shadow: 5px 5px 10px #00000040;
   color: #fff;
   font-weight: 600;
   font-size: 18px;
 }
 .place__link-button:hover {
-  opacity: 80%;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
