--- a/blocks/place.css
+++ b/blocks/place.css
@@ -37,7 +37,7 @@
 }
 .place__image {
   box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.5);
-  max-width: 100%;
+  width: 100%;
   grid-row: 2/4;
 }
 .place__image:hover {
@@ -64,6 +64,7 @@
   padding: 18px 30px;
   background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
   border-radius: 5px;
+  border: 0;
   box-shadow: 5px 5px 10px #00000040;
   color: #fff;
   font-weight: 600;
